# vulnctl

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  FRAMEWORK.md  M1_KICKOFF_PROMPT.md  README.md  ROADMAP.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml  live-smoke.yml  publish-testpypi.yml  release.yml
docs/: announcement.md  case-study.md  context.md  demo.tape  exit-codes.md  output.md  releasing.md  schema.json  schema.md  trees.md
examples/: app.cdx.json  context.yaml
examples/ci/: vulnctl-gate.yml
scripts/: build_exploit_index.py  case_study_stats.py
src/vulnctl/: __init__.py  cache.py  cli.py  context.py  models.py  pipeline.py
src/vulnctl/adapters/: __init__.py  base.py  epss.py  exploits.py  ghsa.py  kev.py  nvd.py  osv.py
src/vulnctl/data/: __init__.py
src/vulnctl/ingest/: __init__.py  cve_list.py  cyclonedx.py  grype.py
src/vulnctl/output/: __init__.py  json_out.py  markdown.py  render.py  sarif.py  table.py
src/vulnctl/ssvc/: __init__.py  engine.py  tree.py
tests/: conftest.py  test_adapter_epss.py  test_adapter_exploits.py  test_adapter_ghsa.py  test_adapter_kev.py  test_adapter_nvd.py  test_adapter_osv.py  test_adapters_base.py  test_cache.py  test_cli.py  test_context.py  test_ingest_cve_list.py  test_ingest_cyclonedx.py  test_ingest_grype.py  test_models.py  test_output_json.py  test_output_markdown.py  test_output_sarif.py  test_output_table.py  test_pipeline.py  test_ssvc_cisa_tree.py  test_ssvc_engine.py  test_ssvc_tree.py
tests/fixtures/epss/: batch.json  malformed.json  missing.json
tests/fixtures/ghsa/: advisory-by-cve.json  advisory-by-ghsa-id.json  malformed.json  rate-limited.json
tests/fixtures/golden/: enrich.json  enrich.md
tests/fixtures/grype/: duplicate-layers.json  npm-app.json
tests/fixtures/kev/: catalog.json
tests/fixtures/nvd/: cve-2021-44228.json  multiple-cvss.json  not-found.json  rejected.json  v2-only.json
tests/live/: test_live_smoke.py
(+13 files in other folders)
