[project]
name = "vulnctl"
version = "0.1.0"
description = "CLI-first vulnerability prioritization: auditable SSVC verdicts from fused threat intelligence"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Brian Truong" }]
requires-python = ">=3.11"
keywords = ["vulnerability", "cve", "ssvc", "epss", "kev", "prioritization", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "typer>=0.16",
    "pydantic>=2.9",
    "httpx>=0.28",
    "rich>=13.9",
    "ruamel.yaml>=0.18",
]

[project.urls]
Homepage = "https://github.com/NokiGuard/vulnctl"

[project.scripts]
vulnctl = "vulnctl.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
    "mypy>=1.14",
    "pre-commit>=4.0",
    "pytest-cov>=6",
    "jsonschema>=4.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vulnctl"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
    "C4",  # comprehensions
    "RUF", # ruff-specific
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
files = ["src"]
python_version = "3.11"
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
